--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>모두의 3개년 수시입시결과</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>모두의 3개년 수시입시결과 석차</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app-container">
-    <h1>모두의 3개년 수시입시결과</h1>
+    <h1>모두의 3개년 수시입시결과 석차</h1>
     <p class="subtitle">Copyright © All Teachers</p>
 
     <!-- 필터 -->
@@ -27,16 +27,16 @@
       <button class="tab" data-tab="delta">연도 대비 변화량 (Delta)</button>
     </div>
 
-    <!-- 그래프 영역 -->
-    <div id="chartArea">
+    <!-- 그래프 -->
+    <div class="chart-wrap">
       <svg id="hybridChart"></svg>
       <svg id="deltaChart" style="display:none;"></svg>
     </div>
 
-    <p class="explain">
-      ■ 색상 밴드: 50~70% 합격 안정 구간<br/>
-      ■ 굵은 점/선: 제공된 대표 컷<br/>
-      ■ Delta Chart: 최근 연도 대비 변화 방향
+    <p class="legend">
+      ■ 색상 밴드: 50~70% 합격 안정 구간<br>
+      ■ 원/선: 제공된 대표 컷<br>
+      ■ Delta Chart: 최근 연도 대비 합격선 변화
     </p>
   </div>
 
